--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
           screens: {
             'navbar': '1200px',
+            '1xl': '1400px',
           },
         }
       }
@@ -229,67 +230,60 @@
       class=" sm:hidden absolute bottom-[-15%] left-0 z-[-1] headerimg w-full h-full" alt="headerbg">
   </header>
   <section>
-    <div class="max-w-[1440px] relative z-[3] w-full h-full max-h-[478px] mx-auto ">
+    <div class="max-w-[1464px] px-3 relative z-[3] w-full h-full max-h-[478px] mx-auto ">
       <h2
-        class="gradient-text hover:text-transparent relative z-[3] text-center font-poppins font-semibold text-7xxl leading-12 tracking-tighter text-white">
+        class="gradient-text hover:text-transparent relative z-[3] text-center font-poppins font-semibold text-5xl sm:text-7xxl leading-12 tracking-tighter text-white">
         Current Stats
       </h2>
-      <div class="mt-11 relative z-[2]">
-        <img src="./assets/images/png/bg-currentstate.png" alt="bg-currentstate"
-          class="w-full absolute z-[-1] h-[478px] top-0 ">
-        <div class="px-[90px] relative z-[4] w-full flex justify-between pt-[100px] ">
-          <div class=" max-w-[240px] w-full group">
-            <a href="#"><img class="flex mix-blend-normal mx-auto group-hover:rotate-[20deg] group duration-300"
-                src="./assets/images/svg/stpls.svg" alt="stphy"></a>
+      <div class="mt-11  relative z-[2]">
+        <img src="./assets/images/svg/currentbg.svg" alt="bg-currentstate"
+          class="w-full absolute  xl:block rounded-3xl z-[-1] h-[478px] top-0 ">
+        <div
+          class="md:px-[80px] 1xl:px-[90px] relative z-[4] w-full flex flex-row max-md:flex-wrap justify-between pt-[110px] 1xl:pt-[100px] ">
+          <div class=" w-1/2 md:max-w-[170px] 1xl:max-w-60 md:w-full mt-20 xl:mt-[100px] group">
             <h3
-              class=" font-barlow-condensed font-semibold  duration-300 text-8xsl leading-11.5 text-center text-white mt-[72px]">
+              class=" font-barlow-condensed font-semibold  duration-300 text-[50px] lg:text-6xl xl:text-8xsl leading-l-xl lg:leading-11.5 text-center text-white mt-[72px]">
               7.19%</h3>
             <p
-              class=" font-barlow-condensed uppercase font-semibold text-2xsl leading-ls-sm text-center text-lightdarkgreen mt-[37px]">
+              class=" font-barlow-condensed uppercase font-semibold text-sm   sm:text-2xsl leading-ls-sm text-center text-lightdarkgreen mt-6 lg:mt-[37px]">
               stpls apy</p>
           </div>
-          <div class=" max-w-[240px] w-full group">
-            <a href="#"><img class=" mx-auto mix-blend-normal flex group-hover:rotate-[20deg]  duration-300"
-                src="./assets/images/svg/pls.svg" alt="stphy"></a>
+          <div class=" w-1/2 md:max-w-[170px] 1xl:max-w-60 md:w-full mt-20 xl:mt-[100px] group">
             <h3
-              class=" font-barlow-condensed font-semibold  duration-300 text-8xsl leading-11.5 text-center text-white mt-[72px]">
+              class=" font-barlow-condensed font-semibold  duration-300 text-[50px] lg:text-6xl xl:text-8xsl leading-l-xl lg:leading-11.5 text-center text-white mt-[72px]">
               317,503</h3>
             <p
-              class=" font-barlow-condensed uppercase font-semibold text-2xsl leading-ls-sm text-center text-lightdarkgreen mt-[37px]">
+              class=" font-barlow-condensed uppercase font-semibold text-sm   sm:text-2xsl leading-ls-sm text-center text-lightdarkgreen mt-6 lg:mt-[37px]">
               PLS Staked</p>
           </div>
-          <div class=" max-w-[240px] w-full group">
-            <a href="#"><img class=" mx-auto mix-blend-normal flex group-hover:rotate-[20deg] group duration-300"
-                src="./assets/images/svg/pool.svg" alt="stphy"></a>
+          <div class=" w-1/2 md:max-w-[170px] 1xl:max-w-60  mt-20 xl:mt-[100px] md:w-full group">
             <h3
-              class=" font-barlow-condensed font-semibold  duration-300 text-8xsl leading-11.5 text-center text-white mt-[72px]">
+              class=" font-barlow-condensed font-semibold  duration-300 text-[50px] lg:text-6xl xl:text-8xsl leading-l-xl lg:leading-11.5 text-center text-white mt-[72px]">
               31.64%</h3>
             <p
-              class=" font-barlow-condensed uppercase font-semibold text-2xsl leading-ls-sm text-center text-lightdarkgreen mt-[37px]">
+              class=" font-barlow-condensed uppercase font-semibold text-sm   sm:text-2xsl leading-ls-sm text-center text-lightdarkgreen mt-6 lg:mt-[37px]">
               Avg. pi pool apy</p>
           </div>
-          <div class=" max-w-[240px] w-full group">
-            <a href="#"><img class="flex mix-blend-normal mx-auto group-hover:rotate-[20deg] group duration-300"
-                src="./assets/images/svg/pools.svg" alt="stphy"></a>
+          <div class=" w-1/2 md:max-w-[170px] 1xl:max-w-60  mt-20 xl:mt-[100px] md:w-full group">
             <h3
-              class=" relative z-[4] font-barlow-condensed font-semibold  duration-300 text-8xsl leading-11.5 text-center text-white mt-[72px]">
+              class=" relative z-[4] font-barlow-condensed font-semibold  duration-300 text-[50px] lg:text-6xl xl:text-8xsl leading-l-xl lg:leading-11.5 text-center text-white mt-[72px]">
               251</h3>
             <p
-              class=" font-barlow-condensed uppercase font-semibold text-2xsl leading-ls-sm text-center text-lightdarkgreen mt-[37px]">
+              class=" font-barlow-condensed uppercase font-semibold text-sm   sm:text-2xsl leading-ls-sm text-center text-lightdarkgreen mt-6 lg:mt-[37px]">
               active pi pools</p>
           </div>
         </div>
-        <div class=" absolute max-w-[1200px] top-[-50%] w-full   left-[50%] translate-x-[-50%] z-[2]">
+        <div class="md:block hidden absolute max-w-[1200px] top-[-50%] w-full   left-[50%] translate-x-[-50%] z-[2]">
           <div
             class=" max-w-[1200px] w-full h-[872px] bg-linercurrentgraditantlayer gradient-border-mask3 relative rounded-[30px] z-[1] w-full">
           </div>
         </div>
       </div>
       <p
-        class="relative  z-[3] text-dark-gray-100 font-poppins font-medium text-2xll leading-l-xl mt-[70px] tracking-tighter text-center max-w-[600px] mx-auto">
+        class="relative  z-[3] text-dark-gray-100 font-poppins font-medium text-xl sm:text-2xll leading-l-xl mt-12 md:mt-[70px] tracking-tighter text-center max-w-[600px] mx-auto">
         Learn how to earn a higher ROI with our decentralized staking protocol</p>
       <button aria-label="learnmore"
-        class=" rounded-full relative  z-[3] bg-blacklow text-xxl mt-[75px]  flex mx-auto text-white   uppercase text-nowrap  nowrap font-barlow-condensed font-semibold leading-5 tracking-low py-[27px] px-11 shadow-innerouter ">
+        class=" rounded-full relative  z-[3] bg-blacklow text-xxl mt-12 md:mt-[75px]  flex mx-auto text-white   uppercase text-nowrap  nowrap font-barlow-condensed font-semibold leading-5 tracking-low py-[27px] px-11 shadow-innerouter ">
         learn more
       </button>
     </div>
