--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             'ls-sm': '22px',
             'l-md': '32px',
             'l-xl': '42px',
+            'l27': '27px',
             '11': '68px',
             '11.5': '72px',
             '12': '81px',
@@ -304,7 +305,7 @@
         Current Stats
       </h2>
       <div class="sm:mt-11  relative z-[2]">
-        <img src="./assets/images/svg/currentbg.svg" alt="bg-currentstate"
+        <img src="./assets/images/svg/currentbg.svg" alt="currentState"
           class="w-full absolute hidden  lg:block rounded-3xl z-[-1] h-[478px] top-0 ">
         <div
           class="md:px-[80px] 1xl:px-[90px] relative z-[4] w-full flex flex-row max-md:flex-wrap justify-between md:pt-20 mt-12 lg:pt-[110px] 1xl:pt-[100px] ">
@@ -350,59 +351,100 @@
       <p
         class="relative  z-[3] text-dark-gray-100 font-poppins font-medium text-xl sm:text-2xll leading-l-xl mt-12 md:mt-[70px] tracking-tighter text-center max-w-[600px] mx-auto">
         Learn how to earn a higher ROI with our decentralized staking protocol</p>
-      <button aria-label="learnmore"
+      <button aria-label="learnMore"
         class=" rounded-full relative  z-[3] bg-blacklow text-xxl mt-12 md:mt-[75px]  flex mx-auto text-white   uppercase text-nowrap  nowrap font-barlow-condensed font-semibold leading-5 tracking-low py-[27px] px-11 shadow-innerouter ">
         learn more
       </button>
     </div>
   </section>
-  <section class=" overflow-x-clip pt-[150px]">
-    <div class=" max-w-[1200px] overflow-x-clip mx-auto">
-      <div class="swiper-container relative z-[1] mt-[300px]">
-        <div class="swiper-wrapper">
+  <section class="2xl:pt-[250px] lg:pt-[150px] pt-[100px] sm:pt-[64px] pt-[50px] 2xs:pt-[50px]">
+    <div class="container mx-auto xl:max-w-[1500px] px-3">
+      <div class="flex flex-row flex-wrap justify-end items-center relative">
+        <div class="w-full">
+          <img src="./assets/images/png/comunity-img.webp" alt="community-img"
+            class="w-full 2xl:max-w-[1350px] max-w-[920px] xl:max-w-[1200px] max-h-[1066px] lg:absolute lg:left-[-16%] lg:bottom-[-22%] hidden lg:block">
+          <img src="./assets/images/png/community-img2.png" alt="community-img2" class="w-full lg:hidden block">
+        </div>
+        <div class="lg:w-[45%] w-full relative z-[1] mt-[20px] lg:mt-0   ">
+          <h2
+            class="font-semibold font-poppins tracking-tighter text-8xl md:text-6xl xl:text-8xxl 2xl:text-8xxl leading-9xxl sm:leading-5xl xl:leading-xxl 2xl:leading-9xl bg-gradient-to-br from-[#FFFFFF] to-[#91CBFF] bg-clip-text text-transparent inline-block mb-[8px] md:mb-[15px] xl:mb-[30px] 2xl:mb-[86px] lg:max-w-[607px]">
+            Community Support</h2>
+          <p
+            class="ff-poppins fw-medium text-xl xl:text-3md text-lightsky tracking-tighter leading-lg sm:leading-4lg xl:leading-4xl lg:max-w-[539px] mb-[20px] xl:mb-[30px] 2xl:mb-[75px]">
+            Join the movement, explore the possibilities, and witness firsthand
+            the ingenuity and creativity
+            that flourishes within
+            the Project Pi community. Together, let's shape the future of blockchain!</p>
+          <p class="font-barlow-condensed font-bold text-sky capitalize text-5md leading-2md mb-[30px]">LATEST PROJECTS
+          </p>
+          <div class="p-[2px] bg-gradient-to-br from-[#2052A9] to-[#0C2353] rounded-[30px] lg:max-w-[541px]">
+            <div
+              class="bg-blue p-[14px] sm:p-[20px] flex justify-between md:pe-[50px] rounded-[30px] shadow-[0_2px_4px_0px_rgba(255,_255,_255,_0.5) inset]">
+              <div class="flex gap-[10px] sm:gap-[18px] md:gap-[24px] items-center">
+                <div
+                  class="border max-w-[90px] p-[8px] border-[2px] border-solid border-darkblue rounded-[12px] bg-offblack ">
+                  <img src="./assets/images/svg/calculater-svg.svg" alt="calculator-svg">
+                </div>
+                <div>
+                  <p
+                    class="font-barlow-condensed font-bold text-xl sm:text-8md text-white capitalize leading-5md mb-[6px] sm:mb-[10px]  ">
+                    App
+                    calculator</p>
+                  <p class="font-barlow-condensed font-medium tracking-tighter text-xl text-offblue leading-5md  ">by
+                    dapplingnetwork</p>
+                </div>
+              </div>
+              <img src="./assets/images/svg/arrow-svg.svg" alt="arrow-svg" class="cursor-pointer">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class=" overflow-x-clip lg:pt-[150px] pt-24 md:pt-32 mt-[300px]">
+    <div class=" max-w-[1224px] px-3 overflow-x-clip mx-auto">
+      <div class="swiper-container overflow-x-clip relative z-[1]">
+        <div class="swiper-wrapper max-w-[1200px] my-auto w-full  my-10 mb-10 md:mb-20 lg:mb-[102px]">
           <div class="swiper-slide text-white">
             <p
-              class=" font-poppins font-medium text- md:text-fs29 leading-l-xl tracking-tighter max-w-[660px] text-center mx-auto">
+              class=" font-poppins font-medium text-lg md:text-fs29  leading-l27 md:leading-l-xl tracking-tighter max-w-[660px] text-center mx-auto">
               By leveraging Project Pi, builders will have one of their key friction points removed catalyzing rapid
               growth in the
               PulseChain economy</p>
           </div>
           <div class="swiper-slide text-white">
             <p
-              class=" font-poppins font-medium text- md:text-fs29 leading-l-xl tracking-tighter max-w-[660px] text-center mx-auto">
+              class=" font-poppins font-medium text-lg md:text-fs29  leading-l27 md:leading-l-xl tracking-tighter max-w-[660px] text-center mx-auto">
               By leveraging Project Pi, builders will have one of their key friction points removed catalyzing rapid
               growth in the
               PulseChain economy</p>
           </div>
           <div class="swiper-slide text-white">
             <p
-              class=" font-poppins font-medium text- md:text-fs29 leading-l-xl tracking-tighter max-w-[660px] text-center mx-auto">
+              class=" font-poppins font-medium text-lg md:text-fs29  leading-l27 md:leading-l-xl tracking-tighter max-w-[660px] text-center mx-auto">
               By leveraging Project Pi, builders will have one of their key friction points removed catalyzing rapid
               growth in the
               PulseChain economy</p>
           </div>
           <div class="swiper-slide text-white">
             <p
-              class=" font-poppins font-medium text- md:text-fs29 leading-l-xl tracking-tighter max-w-[660px] text-center mx-auto">
+              class=" font-poppins font-medium text-lg md:text-fs29  leading-l27 md:leading-l-xl tracking-tighter max-w-[660px] text-center mx-auto">
               By leveraging Project Pi, builders will have one of their key friction points removed catalyzing rapid
               growth in the
               PulseChain economy</p>
           </div>
           <div class="swiper-slide text-white">
             <p
-              class=" font-poppins font-medium text- md:text-fs29 leading-l-xl tracking-tighter max-w-[660px] text-center mx-auto">
+              class=" font-poppins font-medium text-lg md:text-fs29  leading-l27 md:leading-l-xl tracking-tighter max-w-[660px] text-center mx-auto">
               By leveraging Project Pi, builders will have one of their key friction points removed catalyzing rapid
               growth in the
               PulseChain economy</p>
           </div>
         </div>
-        <img class=" absolute start-0 top-[-20%] md:top-0" src="./assets/images/svg/arrowslider.svg" alt="arrowslider">
+        <img class=" absolute start-0 top-[-72px] md:top-0" src="./assets/images/svg/arrowslider.svg" alt="arrowslider">
       </div>
       <div class="swiper-progress-bar">
         <div class="progress"></div>
-      </div>
-      <div class="swiper-counter">
-        <span class="current">1</span>/<span class="total">3</span>
       </div>
     </div>
   </section>
