--- a/index2.html
+++ b/index2.html
@@ -58,9 +58,9 @@
                     <div class='grid grid-cols-2 gap-[30px]'>
                         <div class='col-span-1 flex flex-col border-[#2B3B81] border-[2px] rounded-[30px]'>
                             <div class=' bg-[linear-gradient(180deg,#142266,0,rgba(20,34,102,0.25)_83.5%)] border-b-[2px] border-[#142A6D]'>
-                                <div class='flex flex-col py-[60px] px-[90px]'>
-                                    <p class='mt-4 text-blue3 font-barlow-condensed leading-heading2 font-bold text-[25px] uppercase'>LIQUID STAKING</p>
-                                    <h3 class='mt-5 font-barlow-condensed uppercase text-white text-[80px] font-semibold'>Earn</h3>
+                                <div class='flex flex-col 2xl:py-[60px] py-10 2xl:px-[90px] px-16'>
+                                    <p class='mt-4 text-blue3 font-barlow-condensed leading-heading2 font-bold md:text-[25px] sm:text-lg text-sm uppercase'>LIQUID STAKING</p>
+                                    <h3 class='md:mt-5 mt-2 font-barlow-condensed uppercase text-white lg:text-[80px] md:text-6xl text-4xl  font-semibold'>Earn</h3>
                                     <p class='py-[60px] font-poppins font-median text-[23px] leading-paracard tracking-tighter text-white'>Participate in PLS staking rewards with Project Pi. Stake your PLS assets to get stPLS, earn rewards, and contribute to the growth of the first decentralized staking protocol on PulseChain.</p>
                                     <div class='flex items-center gap-4'>
                                         <button class='text-white '>liquid stake</button>
@@ -118,8 +118,8 @@
                         </div>
                         <div class='col-span-1 flex flex-col border-[#2B3B81] border-[2px] rounded-[30px]'>
                             <div class=' bg-[linear-gradient(180deg,#142266,0,rgba(20,34,102,0.25)_83.5%)] border-b-[2px] border-[#142A6D]'>
-                                <div class='flex flex-col py-[60px] px-[90px]'>
-                                    <p class='mt-4 text-purple font-barlow-condensed leading-heading2 font-bold text-[25px] uppercase'>NODE OPERATOR</p>
+                                <div class='flex flex-col 2xl:py-[60px] py-10 2xl:px-[90px] px-20'>
+                                    <p class='mt-4 text-purple font-barlow-condensed leading-heading2 font-bold md:text-[25px] sm:text-lg text-sm uppercase'>NODE OPERATOR</p>
                                     <h3 class='mt-5 font-barlow-condensed uppercase text-white text-[80px] font-semibold'>Validate</h3>
                                     <p class='py-[60px] font-poppins font-median text-[23px] leading-paracard tracking-tighter text-white'>Earn more than validating solo. Stake PPY, get matched with PLS, and launch your node with a Minipool. Use your PPY rewards to gain PLS delegations.</p>
                                     <div class='flex items-center gap-4'>
@@ -245,8 +245,8 @@
               <span class="absolute top-[66%] left-[103%] max-2xl:max-w-[50px]  w-full "><img src="./assets2//images/svg/bluearrow.svg" alt="arrow"></span>
                   </div>
           </div>
-          <div class=" absolute md:top-[48%] sm:top-[64%] top-[62%] lg:hidden block ">
-              <span class="w-[2px] h-[60px] bg-blue2 ms-[57px] block"> </span>
+          <div class=" absolute md:top-[46%] sm:top-[64%] top-[62%] lg:hidden block ">
+              <span class="w-[2px] h-[60px] bg-blue2 ms-[60px] block"> </span>
                 <h4 class="font-barlow-condensed font-bold text-center py-2 leading-heading4 text-blue text-lg">PLS MATCHED TO <span class="block"></span>MINIPOOL IN QUEUE</h4>
              <img class="ms-[56px]" src="./assets2/images/svg/uparrow.svg" alt="uparrow">
           </div>
@@ -270,8 +270,8 @@
       <div class="flex justify-center  md:pt-[50px]">
         <img class="md:block hidden" src="./assets2/images/svg/workline.svg" alt="workline">
       </div>
-      <div class="flex justify-center pt-4"><img src="./assets2//images/svg/uparrow.svg" alt="uparrow"></div>
-  <div class=' md:pt-7 pt-56 flex justify-center items-center'>
+      <div class="flex justify-center pt-4"><img class="md:hidden block" src="./assets2//images/svg/uparrow.svg" alt="uparrow"></div>
+  <div class=' md:pt-7 pt-16 flex justify-center items-center'>
       <div class='bg-innerboxgradient sm:max-w-[840px] w-full rounded-[35px] p-[2px] max-sm:rounded-2xl'>
           <div class="bg-card w-full p-[15px] rounded-[35px] max-sm:rounded-2xl max-sm:pb-[56px]
           ">
@@ -279,7 +279,7 @@
 <div class=' max-sm:flex justify-center max-sm:-translate-y-10 w-[66.66%] max-sm:w-full'>
     <div class=' bg-box-gradient p-[3px] rounded-[20px] w-[240px] max-sm:max-w-[110.22px] h-[240px] max-sm:h-[110.22px]  max-sm:rounded-[9.19px]'>
         <div class="bg-innerboxgradient  w-full h-full rounded-[20px] flex justify-center items-center max-sm:rounded-[9.19px]">
-            <img src="./assets2/images/svg/big-sucess.svg" alt="big-sucess">
+            <img src="./assets2/images/svg/big-sucess.svg" alt="big-sucess" class="max-sm:w-[65%]">
     </div>
 </div>
 </div>
