--- a/index2.html
+++ b/index2.html
@@ -63,8 +63,8 @@
                                     <h3 class='md:mt-5 mt-2 font-barlow-condensed uppercase text-white lg:text-[80px] md:text-6xl text-4xl  font-semibold'>Earn</h3>
                                     <p class='py-[60px] font-poppins font-median text-[23px] leading-paracard tracking-tighter text-white'>Participate in PLS staking rewards with Project Pi. Stake your PLS assets to get stPLS, earn rewards, and contribute to the growth of the first decentralized staking protocol on PulseChain.</p>
                                     <div class='flex items-center gap-4'>
-                                        <button class='text-white '>liquid stake</button>
-                                        <button class='text-white '>learn more</button>
+                                        <button class='text-blue2 '>liquid stake</button>
+                                        <button class='text-blue2 '>learn more</button>
                                     </div>
                                 </div>
                             </div>
