--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             'dark-gray-100': '#DFE5F7',
             lightwhite: '#ffffff59',
             lightdarkgreen: '#04CBF3',
+            clifford: '#da373d',
+            lightdarkgreen: '#04CBF3',
+            darkblue: '#153985',
+            offblack: '#081433',
+            offblue: '#476BB2',
+            light: '#D9F5FF',
           },
           backgroundImage: {
             linersvggraditant: 'radial-gradient(75.71% 75.71% at 26.43% 24.29%, #FFFFFF 0%, rgba(255, 255, 255, 0) 79.99%)',
@@ -32,9 +38,20 @@
             '2xxl': '26px',
             '2xll': '28px',
             'fs29': '29px',
-            'max-big': '107px',
+            '8xl': '48px',
             '7xxl': '74px',
             '8xsl': '80px',
+            'max-big': '107px',
+            //  '2md': '22.5px',
+            // '3md': '23.2px',
+            // '5md': '25.2px',
+            // 'lg': '30px',
+            // '4lg': '34.2px',
+            // '4xl': '40.25px',
+            // '9xxl': '49px',
+            // '5xl': '64px',
+            // '9xl': '115px',
+            // 'xxl': '100px',
           },
           lineHeight: {
             'max-big': '132px',
@@ -361,25 +378,26 @@
     <div class="container mx-auto xl:max-w-[1500px] px-3">
       <div class="flex flex-row flex-wrap justify-end items-center relative">
         <div class="w-full">
-          <img src="./assets/images/png/comunity-img.webp" alt="community-img"
+          <img src="./assets/images/webp/comunity-img.webp" alt="community-img"
             class="w-full 2xl:max-w-[1350px] max-w-[920px] xl:max-w-[1200px] max-h-[1066px] lg:absolute lg:left-[-16%] lg:bottom-[-22%] hidden lg:block">
-          <img src="./assets/images/png/community-img2.png" alt="community-img2" class="w-full lg:hidden block">
+          <img src="./assets/images/webp/community-img2.webp" alt="community-img2" class="w-full lg:hidden block">
         </div>
         <div class="lg:w-[45%] w-full relative z-[1] mt-[20px] lg:mt-0   ">
           <h2
             class="font-semibold font-poppins tracking-tighter text-8xl md:text-6xl xl:text-8xxl 2xl:text-8xxl leading-9xxl sm:leading-5xl xl:leading-xxl 2xl:leading-9xl bg-gradient-to-br from-[#FFFFFF] to-[#91CBFF] bg-clip-text text-transparent inline-block mb-[8px] md:mb-[15px] xl:mb-[30px] 2xl:mb-[86px] lg:max-w-[607px]">
             Community Support</h2>
           <p
-            class="ff-poppins fw-medium text-xl xl:text-3md text-lightsky tracking-tighter leading-lg sm:leading-4lg xl:leading-4xl lg:max-w-[539px] mb-[20px] xl:mb-[30px] 2xl:mb-[75px]">
+            class="ff-poppins fw-medium text-xl xl:text-xxl text-dark-gray-100 tracking-tighter leading-lg sm:leading-4lg xl:leading-4xl lg:max-w-[539px] mb-[20px] xl:mb-[30px] 2xl:mb-[75px]">
             Join the movement, explore the possibilities, and witness firsthand
             the ingenuity and creativity
             that flourishes within
             the Project Pi community. Together, let's shape the future of blockchain!</p>
-          <p class="font-barlow-condensed font-bold text-sky capitalize text-5md leading-2md mb-[30px]">LATEST PROJECTS
+          <p class="font-barlow-condensed font-bold text-lightdarkgreen capitalize text-2xsl leading-2md mb-[30px]">
+            LATEST PROJECTS
           </p>
           <div class="p-[2px] bg-gradient-to-br from-[#2052A9] to-[#0C2353] rounded-[30px] lg:max-w-[541px]">
             <div
-              class="bg-blue p-[14px] sm:p-[20px] flex justify-between md:pe-[50px] rounded-[30px] shadow-[0_2px_4px_0px_rgba(255,_255,_255,_0.5) inset]">
+              class="bg-main p-[14px] sm:p-[20px] flex justify-between md:pe-[50px] rounded-[30px] shadow-[0_2px_4px_0px_rgba(255,_255,_255,_0.5) inset]">
               <div class="flex gap-[10px] sm:gap-[18px] md:gap-[24px] items-center">
                 <div
                   class="border max-w-[90px] p-[8px] border-[2px] border-solid border-darkblue rounded-[12px] bg-offblack ">
@@ -387,10 +405,10 @@
                 </div>
                 <div>
                   <p
-                    class="font-barlow-condensed font-bold text-xl sm:text-8md text-white capitalize leading-5md mb-[6px] sm:mb-[10px]  ">
+                    class="font-barlow-condensed font-bold text-xl sm:text-2xll text-white capitalize leading-2xsl mb-[6px] sm:mb-[10px]  ">
                     App
                     calculator</p>
-                  <p class="font-barlow-condensed font-medium tracking-tighter text-xl text-offblue leading-5md  ">by
+                  <p class="font-barlow-condensed font-medium tracking-tighter text-xl text-offblue leading-2xsl  ">by
                     dapplingnetwork</p>
                 </div>
               </div>
