--- a/index2.html
+++ b/index2.html
@@ -294,7 +294,8 @@
     </div>
     </section>
 
-    <section >
+    <!-- =======Research =========== -->
+    <section class="bg-[url(./assets2//images/webp/bg-research.webp)] bg-main bg-cover min-h-screen">
 
     </section>
   </body>
