--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,7 @@
           extend: {
             colors: {
               blue3:"#04CBF3",
+             horizontal: "#0D2561",
               clifford: "#da373d",
               bordercolor:"#2B3B81",
               blue:'#5071D4',
@@ -20,10 +21,36 @@
              blue2: '#1F3987',
               para2:'#B1BDDE',
               main: "#071331",
+              bordercolor2:"#193E89",
+              blacklow: '#061130',
             },
             lineHeight:{
+'ls-sm': '22px',
+            'max-big': '132px',
+            'l-sm': '23px',
+            'l-md': '32px',
+            'l-xl': '42px',
+            'l27': '27px',
+            '11': '68px',
+            '11.5': '72px',
+            '12': '81px',
+            '5md': '25.2px',
+            'lg': '30px',
+            '4lg': '34.2px',
+            '4xl': '40.25px',
+            '9xxl': '49px',
+            '5xl': '64px',
+            '9xl': '115px',
+            'xxl': '117px',
+
+              heading1:'81.4px',
+              76:"76.8px",
+              responsive2:"12.6px",
+              responsive:'44px',
+              button:'23.4px',
               heading2:'22.5px',
               para3:'24px',
+              para4:'40.25px',
                 heading:"37.8px",
                 para:"30px",
                 paracarad:'34.4px',
@@ -41,11 +68,33 @@
                  "box-gradient":' radial-gradient(127.22% 415.03% at -16.43% 122.04%, #FF33DD 0%, #4D79FF 50%, #00D5FF 100%) ',
 "card":'linear-gradient(180deg, rgba(20, 34, 102, 0.25)  0%,  #142266 83.5%)',
 "innerboxgradient":"linear-gradient(180deg, #142266 0%, rgba(20, 34, 102, 0.25) 83.5%)",
-
-
-
+"whitegradient":"linear-gradient(139.17deg, #FFFFFF -42.09%, #91CBFF 215.36%)",
+"linegradient":" linear-gradient(180deg, #0A60C0 0%, #487EFF 100%)"
 
             },
+            boxShadow: {
+            'innerouter': '2px 10px 40px 0px #00000040,0px 0px 20px 0px #0095FF80 inset'
+          },
+            fontSize:{
+              "74":"74px",
+              "23":"23px",
+              "26":"26px",
+              "40":"40px",
+              "64":"64px",
+              "30":"30px",
+
+              'xxl': '23px',
+            '2xsl': '25px',
+            '2xxl': '26px',
+            '2xll': '28px',
+            'fs29': '29px',
+            'max-big': '107px',
+            '7xxl': '74px',
+            '8xsl': '80px',
+            '8xxl': '108px',
+            '4lg': '34px',
+            '8xl': '48px',
+            }
           },
         },
       };
@@ -53,6 +102,7 @@
   </head>
   <body>
 
+<!-- =====cards========= -->
     <section class="bg-main">
                 <div class='container max-w-[1464px] mx-auto px-3'>
                     <div class='grid grid-cols-2 gap-[30px]'>
@@ -61,7 +111,7 @@
                                 <div class='flex flex-col 2xl:py-[60px] py-10 2xl:px-[90px] px-16'>
                                     <p class='mt-4 text-blue3 font-barlow-condensed leading-heading2 font-bold md:text-[25px] sm:text-lg text-sm uppercase'>LIQUID STAKING</p>
                                     <h3 class='md:mt-5 mt-2 font-barlow-condensed uppercase text-white lg:text-[80px] md:text-6xl text-4xl  font-semibold'>Earn</h3>
-                                    <p class='py-[60px] font-poppins font-median text-[23px] leading-paracard tracking-tighter text-white'>Participate in PLS staking rewards with Project Pi. Stake your PLS assets to get stPLS, earn rewards, and contribute to the growth of the first decentralized staking protocol on PulseChain.</p>
+                                    <p class='py-[60px] font-poppins font-median text-23 leading-paracard tracking-tighter text-white'>Participate in PLS staking rewards with Project Pi. Stake your PLS assets to get stPLS, earn rewards, and contribute to the growth of the first decentralized staking protocol on PulseChain.</p>
                                     <div class='flex items-center gap-4'>
                                         <button class='text-blue2 '>liquid stake</button>
                                         <button class='text-blue2 '>learn more</button>
@@ -121,7 +171,7 @@
                                 <div class='flex flex-col 2xl:py-[60px] py-10 2xl:px-[90px] px-20'>
                                     <p class='mt-4 text-purple font-barlow-condensed leading-heading2 font-bold md:text-[25px] sm:text-lg text-sm uppercase'>NODE OPERATOR</p>
                                     <h3 class='mt-5 font-barlow-condensed uppercase text-white text-[80px] font-semibold'>Validate</h3>
-                                    <p class='py-[60px] font-poppins font-median text-[23px] leading-paracard tracking-tighter text-white'>Earn more than validating solo. Stake PPY, get matched with PLS, and launch your node with a Minipool. Use your PPY rewards to gain PLS delegations.</p>
+                                    <p class='py-[60px] font-poppins font-median text-23 leading-paracard tracking-tighter text-white'>Earn more than validating solo. Stake PPY, get matched with PLS, and launch your node with a Minipool. Use your PPY rewards to gain PLS delegations.</p>
                                     <div class='flex items-center gap-4'>
                                         <button class='text-white '>liquid stake</button>
                                         <button class='text-white '>learn more</button>
@@ -178,17 +228,18 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> 
+
     <!-- ======how does it work ====== -->
     <section class="bg-main py-[100px]">
-      <div class="max-w-[1499px] mx-auto px-3">
+      <div class=" container max-w-[1499px] mx-auto px-3">
         <h2
           class="font-poppins font-semibold md:leading-[118.8px] leading-normal lg:text-[108px] md:text-[80px] sm:text-[60px] text-[40px] text-center bg-headinggradient bg-clip-text text-transparent"
         >
           How does it work?
         </h2>
         <p
-          class="text-center sm:text-[23px] text-base text-para mx-auto max-sm:max-w-[299px] font-medium font-poppins max-w-[720px] lg:pt-[74px] md:pt-14 max-sm:py-10 md:leading-[40.25px]"
+          class="text-center sm:text-23 text-base text-para mx-auto max-sm:max-w-[299px] font-medium font-poppins max-w-[720px] lg:pt-[74px] md:pt-14 max-sm:py-10 md:leading-[40.25px]"
         >
           Project Pi uses liquid staking to lower the PulseChain minimum staking
           requirement to launch a node and become a validator. Reward cycles
@@ -295,8 +346,55 @@
     </section>
 
     <!-- =======Research =========== -->
-    <section class="bg-[url(./assets2//images/webp/bg-research.webp)] bg-main bg-cover min-h-screen">
+    <section class="bg-[url(./assets2//images/webp/bg-research.webp)] lg:pt-40 md:pt-28 sm:pt-16 pt-12 bg-main bg-cover ">
+      <div class="container max-w-[1440px] mx-auto px-4 max-sm:pt-1">
+        <div class="flex lg:pb-14 pb-11 justify-center">
+          <img src="./assets2/images/svg/reseacrh-icon.svg" alt="reseacrh-icon" class="max-sm:w-[80px] max-sm:h-[80px]">
+           </div>
+          <h2 class="bg-whitegradient lg:text-74 md:text-6xl sm:text-5xl text-40 md:leading-heading1 leading-responsive lg:pt-1 pb-2 font-semibold tracking-tighter text-center text-transparent bg-clip-text ">Want to do your own research?</h2>
+       <p class="text-para md:leading-para4 leading-para3 font-medium font-poppins lg:pb-14 pb-11 text-center lg:pt-16 pt-10 tracking-tighter md:text-23 text-base ">Take a look at the documentation to help you get started faster.</p>
+       <div class="flex justify-center">
+        <!-- <button class="text-26 text-white px-[68.5px] py-[31px] border-blue2 font-semibold font-barlow-condensed leading-button tracking-low">learn more</button> -->
+      <button aria-label="learnMore"
+        class=" rounded-full bg-main relative max-sm:mb-12  z-[3] bg-blacklow text-xxl   flex mx-auto text-white   uppercase text-nowrap  nowrap font-barlow-condensed font-semibold leading-5 tracking-low py-[27px] px-11 shadow-innerouter ">
+        learn more
+      </button>
+      </div>
+      <div class="flex justify-center">
+        <div class="w-[3px] sm:block hidden bg-linegradient h-[177px]"></div>
+      </div>
+      </div>
+    </section>
 
+    <!-- ========safe-secure ========= -->
+    <section class="py-60 text-center bg-main">
+      <div class="container max-w-[1320px] mx-auto px-3">
+        <p class="text-blue3 font-bold lg:text-2xsl lg:pb-[75px] md:pb-14 sm:pb-12 pb-9 ">safe & secure</p>
+        <h2 class="lg:text-8xxl md:text-7xl sm:text-6xl text-40 md:leading-xxl leading-9 font-poppins font-semibold lg:pb-24 md:pb-16 sm:pb-10 pb-7 tracking-tighter bg-whitegradient bg-clip-text text-transparent">Audited by the best</h2>
+        <div class="max-w-[1322px] border-bordercolor2 rounded-[30px] border-[2px] p-3 max-h-[300px] w-full h-full">
+          <div class="flex gap-[120px] overflow-hidden py-24 text-nowrap">
+            <img src="./assets2/images/webp/rd-logo.webp" alt="rd-logo" class="max-w-[169px]  max-h-[90px]">
+            <div class="min-w-[3px] bg-horizontal max-h-[30px]"></div>
+            <img src="./assets2/images/webp/hat-logo.webp" alt="hat-logo" class="max-w-[160px]  max-h-[80px]">
+             <div class="min-w-[3px] bg-horizontal max-h-[30px] "></div>
+               <img src="./assets2/images/webp/rd-logo.webp" alt="rd-logo" class="max-w-[169px] max-h-[90px]">
+            <div class="min-w-[3px] bg-horizontal max-h-[30px] "></div>
+            <img src="./assets2/images/webp/hat-logo.webp" alt="hat-logo" class="max-w-[160px]  max-h-[80px]">
+             <div class="min-w-[3px] bg-horizontal max-h-[30px] "></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- =========mission-section========= -->
+    <section class="pt-20 bg-main">
+      <div class="container max-w-[1320px] mx-auto px-3">
+        <div class="md:flex ">
+          <div class="w-[3px] md:block hidden h-[40px] bg-blue3"></div>
+          <p class="font-bold md:text-2xsl sm:text-base text-sm md:pb-0 pb-11 md:ps-14  font-barlow-condensed mad:text-start text-center md:leading-heading2 leading-responsive2 text-blue3">OUR <span class="md:block"></span>MISSION</p>
+            <h2 class="font-poppins lg:text-64 md:text-6xl sm:text-4xl text-30 md:ps-44 bg-whitegradient text-transparent md:text-start text-center bg-clip-text tracking-tighter max-w-[1008px] font-semibold md:leading-76 leading-127">To Make Blockchain Infrastructure Accessible To Everyone</h2>
+        </div>
+      </div>
     </section>
   </body>
 </html>
